--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "json-server-auth": "^1.1.0"
+  }
 }
