--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "faker": "^4.1.0",
+    "history": "^4.9.0",
     "lodash.isempty": "^4.4.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
